Attempt to fix issues with grid on mobile view when using phone

--- a/css/home.css
+++ b/css/home.css
@@ -43,13 +43,82 @@
   background-color: #533b3b;
 }
 
+.item-1 {
+  grid-row: 1 / span 1;
+  grid-column: 1 / span 1;
+}
+.item-2 {
+  grid-row: 1 / span 1;
+  grid-column: 2 / span 1;
+}
+.item-3 {
+  grid-row: 1 / span 1;
+  grid-column: 3 / span 1;
+}
+.item-4 {
+  grid-row: 2 / span 1;
+  grid-column: 1 / span 1;
+}
+.item-5 {
+  grid-row: 2 / span 1;
+  grid-column: 2 / span 1;
+}
+.item-6 {
+  grid-row: 2 / span 1;
+  grid-column: 3 / span 1;
+}
+.item-7 {
+  grid-row: 3 / span 1;
+  grid-column: 1 / span 1;
+}
+.item-8 {
+  grid-row: 3 / span 1;
+  grid-column: 2 / span 1;
+}
+.item-9 {
+  grid-row: 3 / span 1;
+  grid-column: 3 / span 1;
+}
+.item-10 {
+  grid-row: 4 / span 1;
+  grid-column: 1 / span 1;
+}
+.item-11 {
+  grid-row: 4 / span 1;
+  grid-column: 2 / span 1;
+}
+.item-12 {
+  grid-row: 4 / span 1;
+  grid-column: 3 / span 1;
+}
+.item-13 {
+  grid-row: 5 / span 1;
+  grid-column: 1 / span 1;
+}
+.item-14 {
+  grid-row: 5 / span 1;
+  grid-column: 2 / span 1;
+}
+.item-15 {
+  grid-row: 5 / span 1;
+  grid-column: 3 / span 1;
+}
+.item-16 {
+  grid-row: 6 / span 1;
+  grid-column: 1 / span 1;
+}
+.item-17 {
+  grid-row: 6 / span 1;
+  grid-column: 2 / span 1;
+}
+
 @media all and (min-width: 800px) {
   #character-grid {
     grid-template-rows: repeat(4, 1fr);
     grid-template-columns: repeat(5, 1fr);
     height: 1000px;
   }
-  /* .item-1 {
+  .item-1 {
     grid-row: 1 / span 1;
     grid-column: 1 / span 1;
   }
@@ -116,5 +185,5 @@
   .item-17 {
     grid-row: 4 / span 1;
     grid-column: 2 / span 1;
-  } */
+  }
 }
